# Embedded-Linux

./: CMakeLists.txt  Day_1_questions.bash  README.md  Task_4  calc_static_bash  dynamic.objdump  embedded_Linux_1.odt  main.c  main.elf  static.objdump  task_3.bash  while_loop_exercise.sh
INCLUDE/: DIO.h  DIO_Config.h  PORT.h  PORT_Config.h  Regesters.h  STD_Types.h  bit_math.h  sub.h
LIB/: DIO.c  DIO_Config.c  PORT.c  PORT_Config.c  div.c
SCR/: CMakeLists.txt  div.c
calc_dynamic/: Calc  calc_dynamic_bash
calc_dynamic/INCLUDE/: add.h  div.h  mult.h
calc_dynamic/LIB/: add.c  div.c
calc_static/: Calc  calc_static_bash  main.c
calc_static/LIB/: mult.c  sub.c
q1/: binarySearch.c  task2_terminal.bash
q2/: q2_explination  task2_q2_terminal.bash
